@@ -4,13 +4,13 @@ import android.graphics.Canvas;
 import android.graphics.Paint;
 import android.graphics.PointF;
 
-import com.utyf.pmetro.Map_View;
 import com.utyf.pmetro.settings.SET;
 import com.utyf.pmetro.util.ExtPath;
 import com.utyf.pmetro.util.ExtPointF;
 import com.utyf.pmetro.util.StationsNum;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 
 /**
  * Created by Utyf on 22.03.2015.
@@ -21,22 +21,22 @@ public class Route {
 
     public int   numTransfers;
     public float timeDiff;
-    ArrayList<RouteNode> nodes;
+    private LinkedList<RouteNode> nodes;
 
     public Route() {}
 
     public Route(Route rt) {
         numTransfers = rt.numTransfers;
-        nodes = new ArrayList<>(rt.nodes);
+        nodes = new LinkedList<>(rt.nodes);
     }
 
     public boolean addNode(RouteNode rn) {
         float tm1, tm2, delDelta;
-        if( nodes==null )  nodes = new ArrayList<>();
+        if( nodes==null )  nodes = new LinkedList<>();
 
         delDelta = TRP.getLine(rn.trp,rn.line).delays.get();  // for remove one extra transfer time
 
-        tm1=TRP.rt.toEnd.getTime(rn);    //trps[rn.trp].lines[rn.line].stns[rn.stn];
+        tm1=TRP.rt.toEnd.getTime(rn);             //trps[rn.trp].lines[rn.line].stns[rn.stn];
         tm2=TRP.rt.toEnd.getTime(TRP.routeStart); //trps[start.trp].lines[start.line].stns[start.stn];
         if( tm1==-1 || tm2==-1 )    return false;  // no route to node
         if( rn.delay==0 )  timeDiff = (tm1+rn.time-tm2)-delDelta; // remove one delay on a non transit stations
@@ -46,7 +46,7 @@ public class Route {
         for( RouteNode rn2 : nodes )  // do not add visited station
             if( rn.direction==rn2.direction && rn.isEqual(rn2) ) return false;
 
-        if( !nodes.isEmpty() && (getLast().trp!=rn.trp || getLast().line!=rn.line) )
+        if( !nodes.isEmpty() && (nodes.getLast().trp!=rn.trp || nodes.getLast().line!=rn.line) )
             if( ++numTransfers > SET.maxTransfer ) return false;
 
         //for( Route rr2 : TRP.routes )  // check all routes is there better or the same
@@ -60,7 +60,11 @@ public class Route {
 
     public RouteNode getLast() {
         if( nodes==null || nodes.isEmpty() ) return null;
-        return nodes.get(nodes.size()-1);
+        return nodes.getLast();
+    }
+
+    public int size() {
+        return nodes.size();
     }
 
     /////     data for drawing
@@ -78,25 +82,25 @@ public class Route {
     }
     private DrawTransfer[] trns;  // for Draw
     private RoutePart[] routeParts;
-    private float mapScale, radius;
+    private float  radius;
 
     void makePath() {    // Make data for draw route
         PointF       pnt1, pnt2=null;
-        RouteNode    rn1,  rn2=null;
+        RouteNode    rn2=null;// rn1,
         RoutePart    rPrt=new RoutePart();
         DrawTransfer tt;
         TRP.Transfer TRPtr;
         ArrayList<RoutePart>  rPrts = new ArrayList<>();
         ArrayList<DrawTransfer> tts = new ArrayList<>();
-        ArrayList<PointF>  pnts = new ArrayList<>();  // coordinates of stations in Part
+        ArrayList<PointF>      pnts = new ArrayList<>(); // coordinates of stations in Part
         ArrayList<StationsNum>  stNums = new ArrayList<>();  // numbers of stations in Part
 
-        mapScale = MapData.map.scale;
         radius = MapData.map.StationDiameter/2;
 
-        for( int i=0; i<nodes.size(); i++ ) {
+        // for( int i=0; i<nodes.size(); i++ ) {
+        //    rn1 = nodes.get(i);
+        for( RouteNode rn1 : nodes ) {
             Line  ll;
-            rn1 = nodes.get(i);
 
             ll = MapData.map.getLine(rn1.trp, rn1.line);
             if( ll==null )    pnt1 = null;
@@ -160,14 +164,14 @@ public class Route {
             if( prt.pth!=null )  c.drawPath( prt.pth, p );
 
             for( PointF pnt : prt.pnts) // draw yellow stations circle
-                c.drawCircle(pnt.x, pnt.y, radius+mapScale, p2);
+                c.drawCircle(pnt.x, pnt.y, radius+1, p2);
         }
 
         PointF pn1, pn2;
         p.setColor(0xff000000);  // draw black transfer edging
-        p.setStrokeWidth( MapData.map.LinesWidth+6*mapScale );   // NPE here
+        p.setStrokeWidth( MapData.map.LinesWidth+6 );   // NPE here
         p2.setColor(0xff000000);
-        float rr = radius+3*mapScale;
+        float rr = radius+3;
         for( DrawTransfer trn : trns ) {
             pn1 = trn.stn1;
             pn2 = trn.stn2;
@@ -177,9 +181,9 @@ public class Route {
         }
 
         p.setColor(0xffffffff);  // draw white transfer edging
-        p.setStrokeWidth(MapData.map.LinesWidth+4*mapScale);
+        p.setStrokeWidth(MapData.map.LinesWidth+4);
         p2.setColor(0xffffffff);
-        rr = radius+2*mapScale;
+        rr = radius+2;
         for( DrawTransfer trn : trns ) {
             pn1 = trn.stn1;
             pn2 = trn.stn2;
@@ -197,7 +201,6 @@ public class Route {
                 c.drawCircle(pnt.x, pnt.y, radius, p2);
                 prt.line.drawText(c,prt.stNums[i].stn);
             }
-
         }
     }
 }
